--- a/plenos/23-12-2016.html
+++ b/plenos/23-12-2016.html
@@ -36,6 +36,8 @@
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-cs padding-1-0 display-ib margin-b0">Moción 10 · Presentada por Ciudadanos</h3>
 
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/cis2277.htm" target="_blank">Moción completa</a>
+
         <p class="padding-1-0">Impulsar medidas para facilitar el relevo generacional de los autónomos y el mantenimiento de la actividad y el empleo en negocios sin sucesión empresarial.</p>
 
         <div id="mocion10"></div>
@@ -45,6 +47,8 @@
     <section class="border-t1 borderc-grey w-100">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-ch padding-1-0 display-ib margin-b0">Moción 11 · Presentada por Chunta Aragonesista</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/cha2294.htm" target="_blank">Moción completa</a>
 
         <p class="padding-1-0">Estudiar la posibilidad de instalar azoteas verdes en edificios municipales.</p>
 
@@ -56,6 +60,8 @@
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0">Moción 12 · Presentada por el Partido Popular</h3>
 
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/pp2295.htm" target="_blank">Moción completa</a>
+
         <p class="padding-1-0">Promover y liderar la creación de un grupo de trabajo con el objetivo de abrir un debate sobre el futuro urbanístico de la ciudad y su planificación en torno a la movilidad, la regeneración y rehabilitación urbana y la sostenibilidad medioambiental y económica.</p>
 
         <div id="mocion12"></div>
@@ -65,6 +71,8 @@
     <section class="border-t1 borderc-grey w-100">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 13 · Presentada por el Partido Socialista Obrero Español</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/psoe2296.htm" target="_blank">Moción completa</a>
 
         <p class="padding-1-0">Instar al gobierno de Zaragoza a consignar en los próximos presupuestos partidas equivalentes a los ahorros generados en gasto energético para la sustitución de luminarias tradicionales por luminarias led.
         </p>
@@ -78,6 +86,8 @@
     <section class="border-t1 borderc-grey w-100">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 14 · Presentada por el Partido Socialista Obrero Español</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/psoe2297.htm" target="_blank">Moción completa</a>
 
         <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 1.</span>Instar al Gobierno de Zaragoza a consignar en los próximos presupuestos, bien a través de proyecto, bien a través del trámite de enmiendas, partidas por valor de 3,1 millones de euros, equivalentes a los ahorros generados en gasto energético para la sustitución de luminarias tradicionales por luminarias LED de última tecnología con conexión punto a punto.</p>
 
@@ -97,6 +107,8 @@
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-psoe padding-1-0 display-ib margin-b0">Moción 15 · Presentada por el Partido Socialista Obrero Español</h3>
 
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/psoe2298.htm" target="_blank">Moción completa</a>
+
         <p class="padding-1-0">Instar al Gobierno central para que permita que las entidades locales reinviertan su superávit en 2017 sin necesidad de generar nuevos ingresos por el mismo importe, a través de una autorización legal que surja de la prórroga de los presupuestos generales del Estado.
 
         <span class="font-w8 display-b margin-t1">Retirada del orden del día por el grupo proponente</span>
@@ -109,6 +121,8 @@
     <section class="border-t1 borderc-grey w-100">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0">Moción 16 · Presentada por el Partido Popular</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/pp2299.htm" target="_blank">Moción completa</a>
 
         <p class="padding-1-0">Instar al gobierno municipal a introducir en el sistema tarifario del transporte público de 2017 la gratuidad del billete para los menores de 7 años y bonificaciones sustanciales para los jóvenes entre 8 y 18 años .
 
@@ -123,6 +137,8 @@
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0">Moción 17 · Presentada por el Partido Popular</h3>
 
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/pp2300.htm" target="_blank">Moción completa</a>
+
         <p class="padding-1-0"><span class="font-w8 display-b margin-b1">Punto 1.</span>Instar al Gobierno de la ciudad a estudiar la implantación del plan renove Zaragoza a lo largo de 2017, para fomentar la renovación del parque automovilístico de la ciudad, orientado a retirar los vehículos más contaminantes.
 
         <span class="font-w8 display-b margin-t1">Retirada del orden del día por el grupo proponente</span>
@@ -133,6 +149,8 @@
     <section class="border-t1 borderc-grey w-100">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-pp padding-1-0 display-ib margin-b0 borderc-b-cs">Moción 18 · Presentada por el Partido Popular y Ciudadanos</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/pp-cis2301.htm" target="_blank">Moción completa</a>
 
         <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 1.</span>Dejar sin efecto los resultados obtenidos en el proceso participativo relativo a la encuesta sobre el trazado de la línea 2 del tranvía.
 
@@ -160,6 +178,8 @@
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-cs padding-1-0 display-ib margin-b0">Moción 19 · Presentada por Ciudadanos</h3>
 
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/cis2302.htm" target="_blank">Moción completa</a>
+
         <p class="padding-1-0">Instar al Gobierno de la ciudad a presentar un informe técnico tanto desde el punto de vista financiero como desde el punto de vista técnico y operativo, antes de cualquier contacto o toma de decisión orientada a la compra de electricidad en el mercado libre mayorista.
 
         <div id="mocion19"></div>
@@ -170,6 +190,8 @@
     <section class="border-t1 borderc-grey w-100">
       <article class="maw-70 padding-1-0">
         <h3 class="border-t10 border-b10 borderc-ch padding-1-0 display-ib margin-b0">Moción 20 · Presentada por Chunta Aragonesista</h3>
+
+        <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/cha2304.htm" target="_blank">Moción completa</a>
 
         <p class="padding-1-0 border-t1 borderc-grey"><span class="font-w8 display-b margin-b1">Punto 1.</span>Instar al Gobierno del Estado y a los Grupos Parlamentarios del Congreso a promover una reforma constitucional que garantice la prohibición expresa de recortar o privatizar, total o parcialmente, el Sistema Público de Pensiones, garantizando el mantenimiento del poder adquisitivo de las mismas.
 
