--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </article>
 
       </section>
-      <footer class="margin-y1 borderc-grey border-t1">
+      <footer class="padding-1-0 borderc-grey border-t1 cruise">
         <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
       </footer>
     <script type="text/javascript" src="js/d3.min.js"></script>
