--- a/partidos/pp.html
+++ b/partidos/pp.html
@@ -28,7 +28,7 @@
 
       <canvas id="zec" width="400" height="400"></canvas>
 
-      <footer class="margin-y1 borderc-grey border-t1">
+      <footer class="padding-1-0 borderc-grey border-t1 cruise">
         <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
       </footer>
     </div>
