--- a/plenos/23-12-2016.html
+++ b/plenos/23-12-2016.html
@@ -139,7 +139,7 @@
 
         <a class="display-b margin-t1" href="http://www.zaragoza.es/ciudad/organizacion/plenos/mociones231216/pp2300.htm" target="_blank">Moción completa</a>
 
-        <p><span class="font-w8 display-b margin-b1">Punto 1.</span>Instar al Gobierno de la ciudad a estudiar la implantación del plan renove Zaragoza a lo largo de 2017, para fomentar la renovación del parque automovilístico de la ciudad, orientado a retirar los vehículos más contaminantes.
+        <p>Instar al Gobierno de la ciudad a estudiar la implantación del plan renove Zaragoza a lo largo de 2017, para fomentar la renovación del parque automovilístico de la ciudad, orientado a retirar los vehículos más contaminantes.
 
         <span class="font-w8 display-b margin-t1">Retirada del orden del día por el grupo proponente</span>
         </p>
