--- a/partidos/zec.html
+++ b/partidos/zec.html
@@ -8,8 +8,6 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <script type="text/javascript" src="js/d3.min.js"></script>
-    <script type="text/javascript" src="js/c3.min.js"></script>
 </head>
 
 <body class="cruise2">
@@ -33,6 +31,7 @@
         <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - 2017</p>
       </footer>
     </div>
+    <script type="text/javascript" src="../js/Chart.min.js"></script>
     <script type="text/javascript" src="../js/zec.js"></script>
 </body>
 </html>
