--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="font-0 border-b1 borderc-grey w-100">
-          <div class="maw-70">
+          <div class="maw-60">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
             <div class="w-50 display-ib texta-r">
               <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
@@ -21,7 +21,7 @@
             </div>
           </div>
     </header>
-    <div class="maw-70 padding-t1">
+    <div class="maw-60 padding-t1">
         <div>
           <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
           <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
@@ -58,7 +58,7 @@
           </div>
 
           <div class="display-b w-100">
-          <a href="partidos/resto.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">RESTO</a>
+          <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">RESTO</a>
           <div id="resto" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  grey  margin-r1"></div>
           <span class="black  font-w8">10.83%</span>
           </div>
@@ -70,9 +70,9 @@
       <section>
 
         <div class="border-t1  padding-t1 border-b1  padding-b1 borderc-grey">
-          <h2 class="font-4 margin-b0  maw-70">Plenos del 2016</h2>
+          <h2 class="margin-b0  maw-60">Plenos del 2016</h2>
         </div>
-        <div class="maw-70 padding-1 padding-l-n">
+        <div class="maw-60 padding-1 padding-l-n">
           <a class="padding-0-5" href="#">enero</a>
           <a class="padding-0-5" href="#">febrero</a>
           <a class="padding-0-5" href="#">marzo</a>
@@ -88,8 +88,8 @@
         </div>
 
         <div class="border-t1  padding-t1 border-b1  padding-b1 borderc-grey grey">
-          <h2 class="font-2 margin-b0  maw-70">Diciembre</h2>
-          <div class="maw-70  margin-t1">
+          <h2 class="font-2 margin-b0  maw-60">Diciembre</h2>
+          <div class="maw-60  margin-t1">
               <div class="w-100 display-b bgc-white padding-1 border-l5 borderc-ch borderc-greyc">
                   <span class="font-1-5 font-w8 display-ib border-r1 borderc-black padding-r1">23</span>
               </div>
@@ -97,8 +97,8 @@
         </div>
 
       </section>
-      <footer class="padding-1-0 borderc-grey border-t1 cruise">
-        <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> MMXVII</p>
+      <footer class="padding-1-0 borderc-grey border-t1 grey">
+        <p class="maw-60 padding-1-0">© Hecho en la antigua <a target="_blank" href="https://es.wikipedia.org/wiki/Salduie">Salduie</a> con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
