--- a/estadisticas.html
+++ b/estadisticas.html
@@ -33,6 +33,7 @@
         <p class="maw-70 padding-1-0">Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
+    <script type="text/javascript" src="js/ScrollMagic.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
