--- a/estadisticas.html
+++ b/estadisticas.html
@@ -63,7 +63,7 @@
         <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
           <svg  class="w-h-100px margin-yx display-b" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 125" ><path d="M50,32.2c3.8,0,6.9-3.1,6.9-6.9c0-3.8-3.1-6.9-6.9-6.9c-3.8,0-6.9,3.1-6.9,6.9C43.1,29.1,46.2,32.2,50,32.2z M50,20.4  c2.7,0,4.9,2.2,4.9,4.9c0,2.7-2.2,4.9-4.9,4.9c-2.7,0-4.9-2.2-4.9-4.9C45.1,22.6,47.3,20.4,50,20.4z M62,40.4l0,4.6h-2v-4.7  c0-0.1,0.1-2-1-3.2c-0.7-0.8-1.8-1.1-3.2-1.1H44.2c-1.4,0-2.5,0.4-3.2,1.1c-1.1,1.2-1,3.1-1,3.1l0,4.8h-2v-4.7c0,0-0.2-2.7,1.6-4.5  c1.1-1.2,2.7-1.8,4.7-1.8h11.5c2,0,3.6,0.6,4.7,1.8C62.2,37.7,62,40.3,62,40.4z M23,65.2c3.8,0,6.9-3.1,6.9-6.9  c0-3.8-3.1-6.9-6.9-6.9c-3.8,0-6.9,3.1-6.9,6.9C16.1,62.1,19.2,65.2,23,65.2z M23,53.4c2.7,0,4.9,2.2,4.9,4.9c0,2.7-2.2,4.9-4.9,4.9  c-2.7,0-4.9-2.2-4.9-4.9C18.1,55.6,20.3,53.4,23,53.4z M35,73.4l0,4.6h-2v-4.7c0-0.1,0.1-2-1-3.2c-0.7-0.8-1.8-1.1-3.2-1.1H17.2  c-1.4,0-2.5,0.4-3.2,1.1c-1.1,1.2-1,3.1-1,3.1l0,4.8h-2v-4.7c0,0-0.2-2.7,1.6-4.5c1.1-1.2,2.7-1.8,4.7-1.8h11.5c2,0,3.6,0.6,4.7,1.8  C35.2,70.7,35,73.3,35,73.4z M77,65.2c3.8,0,6.9-3.1,6.9-6.9c0-3.8-3.1-6.9-6.9-6.9c-3.8,0-6.9,3.1-6.9,6.9  C70.1,62.1,73.2,65.2,77,65.2z M77,53.4c2.7,0,4.9,2.2,4.9,4.9c0,2.7-2.2,4.9-4.9,4.9c-2.7,0-4.9-2.2-4.9-4.9  C72.1,55.6,74.3,53.4,77,53.4z M89,73.4l0,4.6h-2v-4.7c0-0.1,0.1-2-1-3.2c-0.7-0.8-1.8-1.1-3.2-1.1H71.2c-1.4,0-2.5,0.4-3.2,1.1  c-1.1,1.2-1,3.1-1,3.1l0,4.8h-2v-4.7c0,0-0.2-2.7,1.6-4.5c1.1-1.2,2.7-1.8,4.7-1.8h11.5c2,0,3.6,0.6,4.7,1.8  C89.2,70.7,89,73.3,89,73.4z M51,49h-2v6.7l-5.5,4.4l1.2,1.6l5.3-4.2l5.3,4.2l1.2-1.6L51,55.7V49z"/></svg>
 
-          <p>El tripartito es una expresión que se ha venido repitiendo en la política Zaragozana a lo largo del tiempo.</p>
+          <p>El <span class="font-w8">tripartito</span> es una expresión que se ha utilizado asiduamente en <span class="font-w8">Zaragoza</span> a lo largo de los años.</p>
 
           <p>El tripartito compuesto por <span class="font-w8">PP, PSOE y C'S</span> se alza con el primer puesto con un <span class="font-w8"> 11.31%</span>, seguido muy de cerca por el tripartito compuesto por <span class="font-w8">ZEC, PSOE y CHA</span> con <span class="font-w8">10.58%</span>.</p>
 
@@ -131,7 +131,7 @@
 
     <section id="en-contra-mociones" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Quién ha ganado más en contra?</p>
+        <p class="font-2">¿Quién vota más en contra?</p>
         <div class="estadisticas w-50 vertical-am display-ib font-1">
           <canvas id="en-contra-mociones-chart" width="400" height="400"></canvas>
         </div>
@@ -143,7 +143,7 @@
 
     <section id="a-favor-mociones" class="w-100 h-100vh border-t1 borderc-french-grey">
       <article class="maw-60 h-100p vertical-am font-0">
-        <p class="font-2">¿Quién ha ganado más a favor?</p>
+        <p class="font-2">¿Quién vota más a favor?</p>
         <div class="texto w-40 padding-r1 vertical-am display-ib font-1">
           Hola que pasa que tal mira mi coche de moda
         </div>
