--- a/partidos/pp.html
+++ b/partidos/pp.html
@@ -38,7 +38,7 @@
 
       <canvas id="zec" width="400" height="400"></canvas>
 
-      <footer class="padding-1-0 borderc-grey border-t1 bgc-acapulco gondola font-w6">
+      <footer class="padding-1-0 borderc-gondola border-t1 bgc-acapulco gondola font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     </div>
