--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
     </header>
-    <nav class="w-100 border-b1 borderc-black padding-1 pos-sy bgc-floralwhite-9 tp-0 zi-10">
+    <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10">
         <div class="maw-60">
             <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
             <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
@@ -255,7 +255,7 @@
 
 
       </section>
-      <footer class="padding-1-0 borderc-gondola border-t1 bgc-acapulco gondola font-w6">
+      <footer class="padding-1-0 borderc-white border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
