--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="mih-100">
-    <header class="font-0 border-b1 borderc-grey w-100">
+    <header class="padding-0-1 font-0 border-b1 borderc-grey w-100">
         <div class="maw-60">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
             <div class="w-50 display-ib texta-r">
@@ -43,7 +43,7 @@
             </form>
         </div>
     </div>
-    <div class="maw-60 padding-t1">
+    <div class="maw-60 padding-1">
         <div>
             <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
             <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
@@ -54,33 +54,33 @@
         <article class="margin-y1 display-ib  w-100">
             <h4 class="margin-y0">Resultados de las elecciones al Ayuntamiento de Zaragoza 2015</h2>
           <div class="display-b w-100">
-            <a href="partidos/pp.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PP</a>
+            <a href="partidos/pp.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">PP</a>
             <div id="pp" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-pp  margin-r1"></div>
-            <span class="black  font-w8">26.88 % · 10 concejales</span>
+            <span class="black  font-w8">26.88 % <span class="display-n  display-ib--s">· 10 concejales</span></span>
           </div>
           <div class="display-b w-100">
-          <a href="partidos/zec.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">ZEC</a>
+          <a href="partidos/zec.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">ZEC</a>
           <div id="zec" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-zec  margin-r1"></div>
-          <span class="black  font-w8">24.57 % · 9 concejales</span>
+          <span class="black  font-w8">24.57 % <span class="display-n  display-ib--s">· 9 concejales</span></span>
           </div>
           <div class="display-b w-100">
-          <a href="partidos/psoe.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">PSOE</a>
+          <a href="partidos/psoe.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">PSOE</a>
           <div id="psoe" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-psoe  margin-r1"></div>
-          <span class="black  font-w8">18.65 % · 6 concejales</span>
+          <span class="black  font-w8">18.65 % <span class="display-n  display-ib--s">· 6 concejales</span></span>
           </div>
           <div class="display-b w-100">
-          <a href="partidos/cs.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">C'S</a>
+          <a href="partidos/cs.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">C'S</a>
           <div id="cs" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cs  margin-r1"></div>
-          <span class="black  font-w8">12.29% · 4 concejales</span>
+          <span class="black  font-w8">12.29% <span class="display-n  display-ib--s">· 4 concejales</span></span>
           </div>
           <div class="display-b w-100">
-          <a href="partidos/cha.html" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">CHA</a>
+          <a href="partidos/cha.html" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">CHA</a>
           <div id="cha" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  bgc-cha  margin-r1"></div>
-          <span class="black  font-w8">6.78% · 2 concejales</span>
+          <span class="black  font-w8">6.78% <span class="display-n  display-ib--s">· 2 concejales</span></span>
           </div>
 
           <div class="display-b w-100">
-          <a href="#" class="display-ib  margin-t1  w-10  textd-n  black  font-w8  padding-1" href="#">RESTO</a>
+          <a href="#" class="display-ib  margin-t1 textd-n  black  font-w8  padding-1 w-30 w-10--s" href="#">RESTO</a>
           <div id="resto" class="border-l2  borderc-black  w-0  h-3  vertical-am  display-ib  resto  margin-r1"></div>
           <span class="black  font-w8">10.83%</span>
           </div>
@@ -89,14 +89,14 @@
       </div>
 
 
-      <section class="border-t1  padding-t1 border-b1  padding-2-0 grey borderc-grey">
+      <section class="border-t1  padding-1 border-b1 grey borderc-grey">
 
           <h2 class="margin-b0  maw-60 font-2 margin-b2">Calendario de plenos</h2>
 
 
           <div class="maw-60 font-0 clearfix">
 
-            <div class="w-45 display-ib   border-radius-10 bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
+            <div class="w-100 w-45--s margin-b1 display-ib   border-radius-10 bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
                   <p class="bgc-fluor padding-1 font-1-5 w-100 border-b1 borderc-white font-w8 margin-y0">2015</p>
 
                   <a href="#">
@@ -146,7 +146,7 @@
 
             </div>
 
-            <div class="w-45 display-ib   border-radius-10 fl-r bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
+            <div class="w-100 w-45--s margin-b1 display-ib   border-radius-10 fl-r bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
 
                   <p class="bgc-fluor padding-1 font-1-5 w-100 border-b1 borderc-white font-w8 margin-y0">2016</p>
 
@@ -254,7 +254,7 @@
 
 
       </section>
-      <footer class="padding-1-0 borderc-white border-t1 bgc-white woodsmoke font-w6">
+      <footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
