--- a/buscador.html
+++ b/buscador.html
@@ -24,9 +24,9 @@
     </header>
     <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10">
         <div class="maw-60">
-            <a class="pfont-1 padding-r1-5 textd-n underline letter-0 letter-0-12--s black" href="#">ESTADÍSTICAS</a>
-            <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0 letter-0-12--s black" href="#">BUSCADOR</a>
-            <a class="font-1 padding-r1-5 textd-n underline letter-0 letter-0-12--s black" href="#">CREDITOS</a>
+            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black" href="#">ESTADÍSTICAS</a>
+            <a id="buscador" class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black" href="#">BUSCADOR</a>
+            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black" href="#">CREDITOS</a>
         </div>
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-2-0">
