--- a/buscador.html
+++ b/buscador.html
@@ -29,6 +29,18 @@
             <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black" href="#">CREDITOS</a>
         </div>
     </nav>
+    <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
+        <div class="maw-60 pos-r">
+            <form class="w-100 w-60--s" action="http://bislai.co/buscador.html">
+                <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                <button class="btn-search bgc-white" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
+                    </svg>
+                </button>
+            </form>
+        </div>
+    </div>
     <div class="border-b1 borderc-grey w-100 padding-2-0">
         <div class="maw-60 pos-r">
             <form action="buscador.html">
