--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
         <div class="maw-60 pos-r">
-            <form class="w-100 w-60--s" action="buscador.html">
+            <form class="w-100 w-60--s" action="http://bislai.co/buscador.html">
+                <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                <button class="btn-search bgc-white" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
+                    </svg>
+                </button>
+            </form>
+        </div>
+    </div>
+    <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
+        <div class="maw-60 pos-r">
+            <form class="w-100 w-60--s" action="http://bislai.co/buscador.html">
                 <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                 <button class="btn-search bgc-white" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -252,6 +264,14 @@
       <footer class="padding-1 padding-1-0--l borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       </footer>
+    <script>
+    $(document).ready(function() {
+        $('#tipue_search_input').tipuesearch({
+          'minimumLength': 2,
+          'contextBuffer': 360
+        });
+    });
+    </script>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script>
