--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
         <div class="maw-60 pos-r">
-            <form class="w-100 w-60--s" action="http://bislai.co/buscador.html">
+            <form class="w-100 w-60--s" action="buscador.html">
                 <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                 <button class="btn-search bgc-white" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -55,6 +55,8 @@
             <a class="btn-share  btn-share-twitter  margin-r1" href="https://twitter.com/intent/tweet?text=Bislai - Como emplean tu voto los diferentes partidos del Ayuntamiento de Zaragoza&url=http://bislai.co&via=debislai&related=debislai" rel="nofollow" target="_blank" title="Comparte en Twitter">Compartir en Twitter</a>
             <a class="btn-share  btn-share-facebook" href="https://facebook.com/sharer.php?u=http://bislai.co" rel="nofollow" target="_blank" title="Comparte en Facebook">Compartir en Facebook</a>
         </div>
+        <p class="font-1">Bislai nace en una sobremesa de un día de octubre. Mientras veía el telediario de Aragon TV una reportera informaba sobre una votación en el pleno del Ayuntamiento de Zaragoza de la que no tenía noticia alguna. Cuando acabó la pieza decidí buscar información y encontre la página de plenos del Ayuntamiento de Zaragoza. Allí estaba toda la información en bruto, sin distinción alguna. Así que recopile toda la información de todos los plenos y decidí mostrarla de una manera más visual.
+        </p>
         <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
         </p>
         <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
